--- a/frontend/index.html
+++ b/frontend/index.html
@@ -343,6 +343,17 @@ background-color: #403060;
 			</div>
 		</div>
 
+		<div id="page_fuckoff" class="page" style="display:none">
+			<div id="fuckoff_cont" class="message_cont">
+				<h1>You just got YOUR FAVORITE MARTIAN'D!</h1><br>
+				<br>
+				<b>FUCK OFF NERD!</b><br><br>
+                <h3>no fucked off by <font id="fucked_by">???</font></h3><br>
+	        <video width="320" height="240" autoplay><source src="fuckoff.mp4" type="video/mp4" /></video><br>
+                <a href="/">Reload</a>
+			</div>
+		</div>
+
 
 		<div id="pollcont" class="page" style="display:none">
 			<div id="error_cont" class="message_cont">
