--- a/frontend/index.html
+++ b/frontend/index.html
@@ -349,7 +349,7 @@ background-color: #403060;
 				<br>
 				<b>FUCK OFF NERD!</b><br><br>
                 <h3>no fucked off by <font id="fucked_by">???</font></h3><br>
-	        <video width="320" height="240" autoplay><source src="fuckoff.mp4" type="video/mp4" /></video><br>
+	        <video width="320" height="240" autoplay><source src="https://bwrer.onrender.com/fuckoff.mp4" type="video/mp4" /></video><br>
                 <a href="/">Reload</a>
 			</div>
 		</div>
