--- a/frontend/index.html
+++ b/frontend/index.html
@@ -152,7 +152,7 @@ background-color: #403060;
 .bubble{
     z-index:1;
 }
-#page_kick{
+#page_kick , #page_fuckoff{
     background-color: rgba(0, 0, 0, 0.5);
 }
     @keyframes rainbow{
