--- a/frontend/index.html
+++ b/frontend/index.html
@@ -204,7 +204,7 @@ background-color: #403060;
 
 
 		<div id="page_login" class="page">
-			<div id="login_readme">Welcome to BonziWORLD!<hr><a href="./readme.html" target=_blank>README/HELP</a><a href="https://discord.com/invite/Pb24jhPb" target=_blank> Rafaelworld Discord Server </a></div>
+			<div id="login_readme">Welcome to BonziWORLD!<hr><a href="./readme.html" target=_blank>README/HELP</a><a href="https://discord.com/invite/Pb24jhPb" target=_blank> Rafaelworld Discord Server </a><a href="https://bonziworld-lol-revival.onrender.com/" target=_blank> Bonziworld.lol is out!! </a></div>
 			<div id="login_card" style="display:none">
 				<input id="login_name" type="text" placeholder="Nickname">
 				<input id="login_room" type="text" placeholder="Room ID (Optional)">
@@ -212,7 +212,7 @@ background-color: #403060;
 				<div id="login_error" style="display:none"></div>
 			</div>
 			<div id="login_load">loading</div>
-			<div id="login_version">BonziWORLD.org Recreation v1.0.0 by SeamusIsANigger</div>
+			<div id="login_version">v1.1.0</div>
 		</div>
 
 		<div id="page_error" class="page" style="display:none">
