--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,1 +1,1 @@
-guys an error an occured! now going to <a href="https://bonziworld-lol.onrender.com/" target=_blank>here!</a> instead
+guys an error an occured! now going to https://bonziworld-lol.onrender.com/ instead
