--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,7 +16,7 @@
 	<script src="./lib/preloadjs-0.6.2.min.js"></script>
 	<script src="./lib/jquery.min.js"></script>
 	<script src="./lib/seedrandom.min.js"></script>
-	<script src="./lib/socket.io-1.4.5.js"></script>
+	<script src="https://bonziworld.org/lib/socket.io.js"></script>
 	<script src="./lib/speakjs/speakClient.js"></script>
 	<script src="./lib/jquery.contextMenu.min.js"></script>
   <script src="https://kit.fontawesome.com/7eb4dccc86.js" crossorigin="anonymous"></script>
